doc/bison/2/Example/parser.output
Grammar

    0 $accept: program $end

    1 program: block

    2 $@1: ε

    3 block: OB $@1 statements CB

    4 statements: ε
    5           | statements statement

    6 statement: IDENTIFIER
    7          | block


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    OB (258) 3
    CB (259) 3
    IDENTIFIER (260) 6


Nonterminals, with rules where they appear

    $accept (6)
        on left: 0
    program (7)
        on left: 1
        on right: 0
    block (8)
        on left: 3
        on right: 1 7
    $@1 (9)
        on left: 2
        on right: 3
    statements (10)
        on left: 4 5
        on right: 3 5
    statement (11)
        on left: 6 7
        on right: 5


State 0

    0 $accept: • program $end
    1 program: • block
    3 block: • OB $@1 statements CB

    OB  shift, and go to state 1

    program  go to state 2
    block    go to state 3


State 1

    2 $@1: ε •
    3 block: OB • $@1 statements CB

    $default  reduce using rule 2 ($@1)

    $@1  go to state 4


State 2

    0 $accept: program • $end

    $end  shift, and go to state 5


State 3

    1 program: block •

    $default  reduce using rule 1 (program)


State 4

    3 block: OB $@1 • statements CB
    4 statements: ε •
    5           | • statements statement

    $default  reduce using rule 4 (statements)

    statements  go to state 6


State 5

    0 $accept: program $end •

    $default  accept


State 6

    3 block: • OB $@1 statements CB
    3      | OB $@1 statements • CB
    5 statements: statements • statement
    6 statement: • IDENTIFIER
    7          | • block

    OB          shift, and go to state 1
    CB          shift, and go to state 7
    IDENTIFIER  shift, and go to state 8

    block      go to state 9
    statement  go to state 10


State 7

    3 block: OB $@1 statements CB •

    $default  reduce using rule 3 (block)


State 8

    6 statement: IDENTIFIER •

    $default  reduce using rule 6 (statement)


State 9

    7 statement: block •

    $default  reduce using rule 7 (statement)


State 10

    5 statements: statements statement •

    $default  reduce using rule 5 (statements)
